Fixed border radius
The border radius was on the bottom right instead of the bottom left. This doesn't look good.

--- a/www/ASMRchive.css
+++ b/www/ASMRchive.css
@@ -117,5 +117,5 @@ tbody {
     position: fixed;
     top: 0;
     right: 0;
-    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
